# matrix-spam-ml

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE.md  README.md  bert.ipynb  dataset_analysis.ipynb  index.html  model.py  model_v2.py  robots.txt  search_index.en.js  sitemap.xml  spam-keras.ipynb
.github/workflows/: build_docker.yaml  build_docs.yml  vet.yml
bot/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json
bot/src/: index.ts
crates/model_server/: Cargo.toml
crates/model_server/schemas/: prediction.json  submit_data.json  submit_review.json  test_data.json
crates/model_server/src/: main.rs
crates/model_server/templates/: index.html
input/: MatrixData  MatrixData.tsv
introduction/: index.html
models/spam_keras_1664061067.8239014/: keras_metadata.pb  saved_model.pb
models/spam_keras_1664061984.2038586/: keras_metadata.pb  saved_model.pb
models/spam_keras_1664062295.9810147/: saved_model.pb
supply-chain/: audits.toml  config.toml
training_checkpoints/: checkpoint  ckpt_1.data-00000-of-00001  ckpt_1.index  ckpt_10.data-00000-of-00001  ckpt_10.index  ckpt_100.data-00000-of-00001  ckpt_100.index  ckpt_101.data-00000-of-00001  ckpt_101.index  ckpt_102.data-00000-of-00001  ckpt_102.index  ckpt_103.data-00000-of-00001  ckpt_103.index  ckpt_104.data-00000-of-00001  ckpt_104.index  ckpt_105.data-00000-of-00001  ckpt_105.index  ckpt_106.data-00000-of-00001  ckpt_106.index  ckpt_107.data-00000-of-00001  ckpt_107.index  ckpt_108.data-00000-of-00001  ckpt_108.index  ckpt_109.data-00000-of-00001  ckpt_109.index  ckpt_11.data-00000-of-00001  ckpt_11.index  ckpt_110.data-00000-of-00001  ckpt_110.index  ckpt_111.data-00000-of-00001  ckpt_111.index  ckpt_112.data-00000-of-00001  ckpt_112.index  ckpt_113.data-00000-of-00001  ckpt_113.index  ckpt_114.data-00000-of-00001  ckpt_114.index  ckpt_115.data-00000-of-00001  ckpt_115.index  ckpt_116.data-00000-of-00001  (+361 more)
(+354 files in other folders)
