[package]
edition = "2021"
name = "model_server"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
axum-auth = {version = "0.3", default-features = false, features = ["auth-bearer"]}
color-eyre = "0.6.2"
linkify = "0.9.0"
once_cell = "1.15.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
#tensorflow = {version = "0.19.1", features = ["tensorflow_gpu"]}
askama = {git = "https://github.com/djc/askama.git", branch = "main"}
askama_axum = {git = "https://github.com/djc/askama.git", branch = "main"}
tensorflow = {version = "0.19.1"}
tokio = {version = "1.0", features = ["full"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
voca_rs = "1.14.0"

[dev-dependencies]
schemars = "0.8.10"
