[package]
edition = "2021"
name = "model_server"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
axum-macros = "0.3.0"
axum-auth = {version = "0.4.0", default-features = false, features = ["auth-bearer"]}
color-eyre = "0.6.2"
linkify = "0.9.0"
once_cell = "1.15.0"
serde = {version = "1.0.149", features = ["derive"]}
serde_json = "1.0.89"
tensorflow = {version = "0.19.1", features = ["tensorflow_gpu"]}
askama = {git = "https://github.com/djc/askama.git", rev = "eeec6f0654f32270aec4e4a0d0f42e4ad39bc28e"}
askama_axum = {git = "https://github.com/djc/askama.git", rev = "eeec6f0654f32270aec4e4a0d0f42e4ad39bc28e"}
#tensorflow = "0.19.1"
tokio = {version = "1.23.0", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
voca_rs = "1.14.0"

[dev-dependencies]
schemars = "0.8.10"
